# CudaFinanceTool

./: API_DOCUMENTATION.md  CMakeLists.txt  CudaFinanceTool.sln  CudaTest.vcxproj  CudaTest.vcxproj.filters  DEPLOYMENT.md  Dockerfile  Makefile  README.md  advanced_options.cu  advanced_options.cuh  config.h  cudaTest.cpp  cudaTest.sln  cuda_interface.py  cuda_option_pricing_analysis.docx  docker-compose.yml  enhanced_risk.cu  enhanced_risk.cuh  error_handling.cu  error_handling.cuh  logging_config.py  main.cu  market_data_feed.py  ml_integration.py  monte_carlo.cu  monte_carlo.cuh  option_pricing.cu  option_pricing.cuh  requirements.txt  risk_analysis.cu  risk_analysis.cuh  test_suite.cu  utils.cu  utils.cuh
.github/workflows/: ci-cd.yml
CudaFinanceTool/x64/Debug/: CudaFinanceTool.dll.recipe  CudaFinanceTool.exe.recipe  CudaFinanceTool.ilk  main.cu-900563176.deps  main.cu.cache  monte_carlo.cu.cache  monte_carlo.cu2111449050.deps  option_pricing.cu-925536857.deps  option_pricing.cu.cache  risk_analysis.cu-809047395.deps  risk_analysis.cu.cache  utils.cu.cache  utils.cu1088275638.deps
CudaFinanceTool/x64/Debug/CudaFinanceTool.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  CudaFinanceTool.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
cudaTest/x64/Release/: cudaTest.exe.recipe  cudaTest.iobj  cudaTest.ipdb
cudaTest/x64/Release/cudaTest.tlog/: Cl.items.tlog  cudaTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
database/: manager.py  models.py
web_interface/: app.py
web_interface/templates/: index.html
x64/Debug/: CudaFinanceTool.exp  CudaFinanceTool.lib  CudaTest.exp  CudaTest.lib
